--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Install zsh
+      run: |
+        sudo apt-get update
+        sudo apt-get install zsh
     - name: Run
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
